# idos-nx

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  idos_record_3-5-2026.mkv
api/: Cargo.toml  README.md
api/src/: compat.rs  ipc.rs  lib.rs  time.rs
bootloader/: README.md
bootloader/bootbin/: Cargo.toml  i386-bootbin.json  link-script.ld
bootloader/floppy-mbr/: floppy_mbr  floppy_mbr.s
bootloader/mbr/: Cargo.toml  i386-mbr.json  link-script.ld
components/: README.md  i386-idos.json
components/drivers/fatdriver/: Cargo.toml  README.md
components/drivers/fatdriver/src/: dir.rs  disk.rs  fs.rs  lib.rs  main.rs  table.rs
components/drivers/floppy/: Cargo.toml  build.rs  link-script.ld
components/drivers/floppy/src/: main.rs
fatdriver/: Cargo.toml  link-script.ld
fatdriver/src/: bpb.rs  disk.rs  driver.rs  fs.rs  main.rs
fatdriver/tests/: integration.rs
kernel/: Cargo.toml  build.rs  i386-kernel.json  link-script.ld
kernel/src/: cleanup.rs  config.rs  conman.rs  exec.rs  graphics.rs  init.rs  log.rs  main.rs  panic.rs  random.rs
libc/: Cargo.toml  README.md
libc/src/: allocator.rs  ctype.rs  dirent.rs  errno.rs  lib.rs  locale.rs  math.rs  mman.rs  setjmp.rs  signal.rs  stat.rs  stdio.rs  stdlib.rs  string.rs  termios.rs  time.rs  unistd.rs
resources/: DRIVERS.CFG  INSTALL.CFG  README.md
sdk/: Cargo.toml  README.md
sdk/src/: env.rs  lib.rs  log.rs  panic.rs
sysroot/: README.md
sysroot/cmake/: idos-toolchain.cmake
sysroot/include/: assert.h  ctype.h  dirent.h  errno.h  fcntl.h  (+16 more)
userdata/: Makefile  README.md  crt0.s  dosio.s  elftest.c  gfxtest.s  testbin.s
(+362 files in other folders)
