[workspace]

members = [
  "api",
  "bootloader/bootbin",
  "bootloader/mbr",
  "components/drivers/testdriver",
  "components/programs/command",
  "components/programs/doslayer",
  "components/programs/elfload",
  "components/programs/gamedemo",
  "components/programs/gfx",
  "components/programs/gopher",
  "components/programs/netcat",
  "kernel",
  "sdk",
]
