[package]
name = "fatdriver"
version = "0.1.0"
edition = "2021"

[features]
default = []
idos = ["idos_api", "idos_sdk"]

[dependencies]
idos_api = { workspace = true, optional = true }
idos_sdk = { workspace = true, optional = true }

[lib]
name = "fatdriver"
path = "src/lib.rs"

[[bin]]
name = "fatdriver"
path = "src/main.rs"
required-features = ["idos"]
